--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version": 2,
     "builds": [
-        { "src": "api/*.js", "use": "@vercel/node" },
+        { "src": "api/**/*.js", "use": "@vercel/node" },
         { "src": "*.html", "use": "@vercel/static" },
         { "src": "*.css", "use": "@vercel/static" }
     ],
     "routes": [
-        { "src": "/api/(.*)", "dest": "/api/$1" },
+        { "src": "/api/getkey", "dest": "/api/getkey/index.js" },
         { "src": "/getkey", "dest": "/getkey.html" },
         { "src": "/(.*)", "dest": "/$1" }
     ]
